k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-svc
spec:
  type: NodePort
  selector:
    app: rails-app
  ports:
    - port: 80
      targetPort: 80
